2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp,
	  MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Fix potential issue when reading the output from svn.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/VersionControl.addin.xml: Allow updating
	  individual files.
	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  If there is no version control for a project or folder, instead of
	  an empty version control menu, show a disabled command saying so.

2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Fix 64 bit issues.

2007-01-29  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* Diff/Diff.cs: chaned to use generics, platform independent newlines
	* Diff/Merge.cs: platform independent newlines
	
2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Logs.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/Revision.cs:
	  Improved the log view. Use a toolbar instead of regular buttons.
	  Provide more information about files comitted in a revision.

2007-01-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp,
	  MonoDevelop.VersionControl/gtk-gui/generated.cs,
	  MonoDevelop.VersionControl/gtk-gui/gui.stetic: Updated.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs: